--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -1,5 +1,3 @@
-// Your custom style
-
 
 // Mixins
 
@@ -13,6 +11,18 @@
   background: url($url);
 }
 
+@mixin bg-attr($bg-size, $bg-repeat, $bg-position){
+  background-size: $bg-size;
+  background-repeat: $bg-repeat;
+  background-position: $bg-position;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+// Start Page Magme
 
 .hm-gradient .full-bg-img {
     background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
@@ -22,22 +32,126 @@
     background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
 }
 
-
-
-/* TEMPLATE STYLES */
 .flex-center {
     color: #fff;
 }
 .intro-1 {
     @include bgimage-jpg('start_bg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    @include bg-attr(cover, no-repeat, center);
+
+}
+
+// Start Page End
+
+.venus-logo-brand{
+  img{
+    max-width: 130px;
+    margin-top: 0px;
+  }
+}
+
+.venus-first-slide{
+  @include bgimage-jpg('slide1');
+  @include bg-attr(cover, no-repeat, center);
+}
+
+.venus-second-slide{
+  @include bgimage-jpg('slide2');
+  @include bg-attr(cover, no-repeat, center);
+}
+
+.venus-third-slide{
+  @include bgimage-jpg('slide3');
+  @include bg-attr(cover, no-repeat, center);
+}
+
+/* Navigation*/
+
+.navbar {
+    background-color: transparent;
+
+}
+
+.top-nav-collapse {
+  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, .8)), to(rgba(216, 27, 96, .8)));
+  background: -o-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+  background: linear-gradient(to 45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+
+}
+
+.navbar .scrolling-navbar {
+    -webkit-transition: background 3s ease-in-out, padding 9s ease-in-out;
+    -moz-transition: background 3s ease-in-out, padding 9s ease-in-out;
+    transition: background 3s ease-in-out, padding 9s ease-in-out;
+}
+
+
+.anons-item{
+  border: 1px solid #fff;
+}
+
+footer.page-footer {
+  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.6)), to(rgba(216, 27, 96, .6)));
+  background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+  background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar {
+        background-color: black;
+    }
+}
+
+
+/* Carousel*/
+
+.carousel {
+    height: 80%;
+}
+
+@media (max-width: 776px) {
+    .carousel {
+        height: 70%;
+    }
+}
+
+.carousel-item,
+.active {
+    height: 100%;
+}
+
+.carousel-inner {
+    height: 100%;
+}
+/*Caption*/
+
+.flex-center {
+    color: #fff;
 }
 .navbar .btn-group .dropdown-menu a:hover {
     color: #000 !important;
 }
-
 .navbar .btn-group .dropdown-menu a:active {
     color: #fff !important;
+}
+
+
+// Responsive
+
+@media (min-width: 992px){
+
+  .navbar-expand-lg .navbar-nav{
+    margin-top: 1%;
+  }
+
+}
+
+@media (min-width: 600px){
+  .navbar.scrolling-navbar.top-nav-collapse{
+    padding-bottom: 10px;
+  }
 }
