--- a/sass/mdb.css
+++ b/sass/mdb.css
@@ -6629,6 +6629,16 @@ footer.page-footer {
   background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
   background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%); }
 
+@media (max-width: 767px) {
+  .card-title {
+    font-size: 1.1rem; }
+  .card-text {
+    display: none; }
+  .btn {
+    font-size: 0.7rem;
+    padding: 0.35rem 1.13rem;
+    margin: 2px; } }
+
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav {
     margin-top: 1%; }
