--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -176,6 +176,20 @@ footer.page-footer {
 }
 
 // Responsive
+@media (max-width: 767px) {
+    .card-title {
+        font-size: 1.1rem;
+    }
+    .card-text {
+        display: none;
+    }
+    .btn {
+        font-size: 0.7rem;
+        padding: 0.35rem 1.13rem;
+        margin: 2px;
+    }
+}
+
 @media (min-width: 992px) {
     .navbar-expand-lg .navbar-nav {
         margin-top: 1%;
