--- a/sass/mdb.css
+++ b/sass/mdb.css
@@ -6602,6 +6602,9 @@ main {
 .navbar .btn-group .dropdown-menu a:active {
   color: #fff !important; }
 
+.card {
+  margin-bottom: 3rem; }
+
 .venus-jumbo {
   background: url("../img/jumbo-main.jpg");
   background-size: cover;
@@ -6631,7 +6634,7 @@ footer.page-footer {
 
 @media (max-width: 767px) {
   .card-title {
-    font-size: 1.1rem; }
+    font-size: 0.9rem; }
   .card-text {
     display: none; }
   .btn {
@@ -6652,7 +6655,11 @@ footer.page-footer {
 
 @media only screen and (max-width: 768px) {
   .navbar {
-    background-color: black; } }
+    background: -moz-linear-gradient(45deg, rgba(231, 11, 96, 0.9), rgba(42, 27, 161, 0.9) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(231, 11, 96, 0.9), rgba(42, 27, 161, 0.9) 100%);
+    background: -webkit-gradient(linear, 45deg, from(rgba(231, 11, 96, 0.8)), to(rgba(42, 27, 161, 0.9)));
+    background: -o-linear-gradient(45deg, rgba(231, 11, 96, 0.9), rgba(42, 27, 161, 0.9) 100%);
+    background: linear-gradient(to 45deg, rgba(231, 11, 96, 0.9), rgba(42, 27, 161, 0.9) 100%); } }
 
 @media (min-width: 600px) {
   .navbar.scrolling-navbar.top-nav-collapse {
