--- a/sass/mdb.css
+++ b/sass/mdb.css
@@ -6514,6 +6514,9 @@ main {
 .venus-h1 {
   color: #DA4F7A; }
 
+.venus-space {
+  margin-top: 5rem; }
+
 .hm-gradient .full-bg-img {
   background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
   background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
@@ -6533,6 +6536,30 @@ main {
 .venus-logo-brand img {
   max-width: 130px;
   margin-top: 0px; }
+
+.modal .modal-c-tabs .modal-body .form-check {
+  padding: 0 2rem 0;
+  font-size: .8rem; }
+
+.modal .modal-c-tabs .modal-body a {
+  color: red !important; }
+
+.modal .modal-c-tabs .nav-tabs {
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem; }
+
+.modal .modal-c-tabs .modal-footer .pt-1 {
+  color: black !important; }
+
+.modal .modal-c-tabs .modal-footer a {
+  color: red !important; }
+
+.modal .nav-item .nav-link.active {
+  background-color: #DA4F7A;
+  color: white; }
+
+.modal .nav-item .nav-link {
+  color: black; }
 
 .venus-first-slide {
   background: url("../img/slide1.jpg");
@@ -6581,7 +6608,7 @@ main {
 .anons-item {
   border: 1px solid #fff; }
 
-/* Carousel*/
+/* Carousel Home Page*/
 .carousel {
   height: 80%; }
 
@@ -6595,6 +6622,91 @@ main {
 /*Caption*/
 .flex-center {
   color: #fff; }
+
+#carousel-example-venus-single {
+  height: 70%; }
+  #carousel-example-venus-single .venus-single-first-slide {
+    background: url("../img/single-lady.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; }
+
+.venus-single .card-header {
+  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.8)), to(rgba(216, 27, 96, 0.8)));
+  background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+  background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%); }
+
+.venus-single .venus-gallery-container {
+  position: relative;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 0.3rem;
+  margin-bottom: 3rem;
+  /* Hide the images by default */
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
+  /* Number text (1/3 etc) */
+  /* Container for image text */
+  /* Six columns side by side */
+  /* Add a transparency effect for thumnbail images */ }
+  .venus-single .venus-gallery-container .cursor {
+    cursor: pointer; }
+  .venus-single .venus-gallery-container .mySlides {
+    display: none; }
+  .venus-single .venus-gallery-container .venus-slideshow-single {
+    width: 100%;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem; }
+  .venus-single .venus-gallery-container .prev,
+  .venus-single .venus-gallery-container .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none; }
+  .venus-single .venus-gallery-container .next {
+    right: 0;
+    border-radius: 3px 0 0 3px; }
+  .venus-single .venus-gallery-container .prev:hover,
+  .venus-single .venus-gallery-container .next:hover {
+    background-color: rgba(0, 0, 0, 0.8); }
+  .venus-single .venus-gallery-container .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0; }
+  .venus-single .venus-gallery-container .caption-container {
+    text-align: center;
+    padding: 2px 16px;
+    color: white;
+    background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+    background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.8)), to(rgba(216, 27, 96, 0.8)));
+    background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+    background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%); }
+  .venus-single .venus-gallery-container .row-slider:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .venus-single .venus-gallery-container .column {
+    float: left;
+    width: 16.66%; }
+  .venus-single .venus-gallery-container .demo {
+    opacity: 0.6; }
+  .venus-single .venus-gallery-container .venus-thumbnail {
+    width: 100%; }
+  .venus-single .venus-gallery-container .active,
+  .venus-single .venus-gallery-container .demo:hover {
+    opacity: 1; }
 
 .navbar .btn-group .dropdown-menu a:hover {
   color: #000 !important; }
@@ -6640,7 +6752,11 @@ footer.page-footer {
   .btn {
     font-size: 0.7rem;
     padding: 0.35rem 1.13rem;
-    margin: 2px; } }
+    margin: 2px; }
+  .venus-single .card-title {
+    font-size: 1.5rem; }
+  .venus-single .venus-space {
+    margin-top: 0; } }
 
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav {
