--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -28,6 +28,10 @@ main {
     color: #DA4F7A;
 }
 
+.venus-space {
+    margin-top: 5rem;
+}
+
 // Start Page Magme
 .hm-gradient .full-bg-img {
     background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
@@ -53,6 +57,42 @@ main {
     img {
         max-width: 130px;
         margin-top: 0px;
+    }
+}
+
+// Modal Login/Register
+.modal {
+    .modal-c-tabs {
+        .modal-body {
+            .form-check {
+                padding: 0 2rem 0;
+                font-size: .8rem;
+            }
+            a {
+                color: red !important;
+            }
+        }
+        .nav-tabs {
+            border-top-left-radius: .25rem;
+            border-top-right-radius: .25rem;
+        }
+        .modal-footer {
+            .pt-1 {
+                color: black !important;
+            }
+            a {
+                color: red !important;
+            }
+        }
+    }
+    .nav-item {
+        .nav-link.active {
+            background-color: #DA4F7A;
+            color: white;
+        }
+        .nav-link {
+            color: black;
+        }
     }
 }
 
@@ -110,7 +150,7 @@ main {
 }
 
 
-/* Carousel*/
+/* Carousel Home Page*/
 
 .carousel {
     height: 80%;
@@ -130,6 +170,110 @@ main {
 
 .flex-center {
     color: #fff;
+}
+
+// Carousel Single Page
+#carousel-example-venus-single {
+    height: 70%;
+    .venus-single-first-slide {
+        @include bgimage-jpg('single-lady');
+        @include bg-attr(cover, no-repeat, center);
+    }
+}
+
+// Body Single Page
+.venus-single {
+    .card-header {
+        background: -moz-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+        background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+        background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, .8)), to(rgba(216, 27, 96, .8)));
+        background: -o-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+        background: linear-gradient(to 45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+    }
+    // Venus SlideShow Gallery
+    .venus-gallery-container {
+        position: relative;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+        border-radius: 0.3rem;
+        margin-bottom: 3rem;
+        .cursor {
+            cursor: pointer;
+        }
+        /* Hide the images by default */
+        .mySlides {
+            display: none;
+        }
+        .venus-slideshow-single {
+            width: 100%;
+            border-top-left-radius: 0.3rem;
+            border-top-right-radius: 0.3rem;
+        }
+        .prev,
+        .next {
+            cursor: pointer;
+            position: absolute;
+            top: 40%;
+            width: auto;
+            padding: 16px;
+            margin-top: -50px;
+            color: white;
+            font-weight: bold;
+            font-size: 20px;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+            -webkit-user-select: none;
+        }
+        /* Position the "next button" to the right */
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+        /* On hover, add a black background color with a little bit see-through */
+        .prev:hover,
+        .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        /* Number text (1/3 etc) */
+        .numbertext {
+            color: #f2f2f2;
+            font-size: 12px;
+            padding: 8px 12px;
+            position: absolute;
+            top: 0;
+        }
+        /* Container for image text */
+        .caption-container {
+            text-align: center;
+            padding: 2px 16px;
+            color: white;
+            background: -moz-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+            background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+            background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, .8)), to(rgba(216, 27, 96, .8)));
+            background: -o-linear-gradient(45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+            background: linear-gradient(to 45deg, rgba(42, 27, 161, .8), rgba(216, 27, 96, .8) 100%);
+        }
+        .row-slider:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+        /* Six columns side by side */
+        .column {
+            float: left;
+            width: 16.66%;
+        }
+        /* Add a transparency effect for thumnbail images */
+        .demo {
+            opacity: 0.6;
+        }
+        .venus-thumbnail {
+            width: 100%;
+        }
+        .active,
+        .demo:hover {
+            opacity: 1;
+        }
+    }
 }
 
 .navbar .btn-group .dropdown-menu a:hover {
@@ -191,6 +335,14 @@ footer.page-footer {
         font-size: 0.7rem;
         padding: 0.35rem 1.13rem;
         margin: 2px;
+    }
+    .venus-single {
+        .card-title {
+            font-size: 1.5rem;
+        }
+        .venus-space {
+            margin-top: 0;
+        }
     }
 }
 
