--- a/sass/mdb.css
+++ b/sass/mdb.css
@@ -6515,7 +6515,7 @@ main {
   color: #DA4F7A; }
 
 .venus-space {
-  margin-top: 5rem; }
+  margin-top: 2rem; }
 
 .hm-gradient .full-bg-img {
   background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
@@ -6631,82 +6631,117 @@ main {
     background-repeat: no-repeat;
     background-position: center; }
 
-.venus-single .card-header {
-  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
-  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
-  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.8)), to(rgba(216, 27, 96, 0.8)));
-  background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
-  background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%); }
-
-.venus-single .venus-gallery-container {
-  position: relative;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 0.3rem;
-  margin-bottom: 3rem;
-  /* Hide the images by default */
-  /* Position the "next button" to the right */
-  /* On hover, add a black background color with a little bit see-through */
-  /* Number text (1/3 etc) */
-  /* Container for image text */
-  /* Six columns side by side */
-  /* Add a transparency effect for thumnbail images */ }
-  .venus-single .venus-gallery-container .cursor {
-    cursor: pointer; }
-  .venus-single .venus-gallery-container .mySlides {
-    display: none; }
-  .venus-single .venus-gallery-container .venus-slideshow-single {
-    width: 100%;
-    border-top-left-radius: 0.3rem;
-    border-top-right-radius: 0.3rem; }
-  .venus-single .venus-gallery-container .prev,
-  .venus-single .venus-gallery-container .next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none; }
-  .venus-single .venus-gallery-container .next {
-    right: 0;
-    border-radius: 3px 0 0 3px; }
-  .venus-single .venus-gallery-container .prev:hover,
-  .venus-single .venus-gallery-container .next:hover {
-    background-color: rgba(0, 0, 0, 0.8); }
-  .venus-single .venus-gallery-container .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0; }
-  .venus-single .venus-gallery-container .caption-container {
-    text-align: center;
-    padding: 2px 16px;
-    color: white;
+.venus-single {
+  /***** CSS Magic to Highlight Stars on Hover *****/
+  /* hover previous stars in list */ }
+  .venus-single .card-header {
     background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
     background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
     background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.8)), to(rgba(216, 27, 96, 0.8)));
     background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
     background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%); }
-  .venus-single .venus-gallery-container .row-slider:after {
-    content: "";
-    display: table;
-    clear: both; }
-  .venus-single .venus-gallery-container .column {
-    float: left;
-    width: 16.66%; }
-  .venus-single .venus-gallery-container .demo {
-    opacity: 0.6; }
-  .venus-single .venus-gallery-container .venus-thumbnail {
-    width: 100%; }
-  .venus-single .venus-gallery-container .active,
-  .venus-single .venus-gallery-container .demo:hover {
-    opacity: 1; }
+  .venus-single .venus-gallery-container {
+    position: relative;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 0.3rem;
+    margin-bottom: 3rem;
+    /* Hide the images by default */
+    /* Position the "next button" to the right */
+    /* On hover, add a black background color with a little bit see-through */
+    /* Number text (1/3 etc) */
+    /* Container for image text */
+    /* Six columns side by side */
+    /* Add a transparency effect for thumnbail images */ }
+    .venus-single .venus-gallery-container .cursor {
+      cursor: pointer; }
+    .venus-single .venus-gallery-container .mySlides {
+      display: none; }
+    .venus-single .venus-gallery-container .venus-slideshow-single {
+      width: 100%;
+      border-top-left-radius: 0.3rem;
+      border-top-right-radius: 0.3rem; }
+    .venus-single .venus-gallery-container .prev,
+    .venus-single .venus-gallery-container .next {
+      cursor: pointer;
+      position: absolute;
+      top: 40%;
+      width: auto;
+      padding: 16px;
+      margin-top: -50px;
+      color: white;
+      font-weight: bold;
+      font-size: 20px;
+      border-radius: 0 3px 3px 0;
+      user-select: none;
+      -webkit-user-select: none; }
+    .venus-single .venus-gallery-container .next {
+      right: 0;
+      border-radius: 3px 0 0 3px; }
+    .venus-single .venus-gallery-container .prev:hover,
+    .venus-single .venus-gallery-container .next:hover {
+      background-color: rgba(0, 0, 0, 0.8); }
+    .venus-single .venus-gallery-container .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0; }
+    .venus-single .venus-gallery-container .caption-container {
+      text-align: center;
+      padding: 2px 16px;
+      color: white;
+      background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+      background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+      background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.8)), to(rgba(216, 27, 96, 0.8)));
+      background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%);
+      background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.8), rgba(216, 27, 96, 0.8) 100%); }
+    .venus-single .venus-gallery-container .row-slider:after {
+      content: "";
+      display: table;
+      clear: both; }
+    .venus-single .venus-gallery-container .column {
+      float: left;
+      width: 16.66%; }
+    .venus-single .venus-gallery-container .demo {
+      opacity: 0.6; }
+    .venus-single .venus-gallery-container .venus-thumbnail {
+      width: 100%; }
+    .venus-single .venus-gallery-container .active,
+    .venus-single .venus-gallery-container .demo:hover {
+      opacity: 1; }
+  .venus-single .customer-list {
+    display: none; }
+  .venus-single .avatar-customer {
+    max-width: 64px; }
+  .venus-single .venus-verify-user {
+    color: #00C851;
+    font-size: 0.9rem; }
+  .venus-single .rating {
+    border: none;
+    float: left; }
+  .venus-single .rating > input {
+    display: none; }
+  .venus-single .rating > label:before {
+    margin: 5px;
+    font-size: 1.25em;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "\f005"; }
+  .venus-single .rating > .half:before {
+    content: "\f089";
+    position: absolute; }
+  .venus-single .rating > label {
+    color: #ddd;
+    float: right; }
+  .venus-single .rating > input:checked ~ label,
+  .venus-single .rating:not(:checked) > label:hover,
+  .venus-single .rating:not(:checked) > label:hover ~ label {
+    color: #FFD700; }
+  .venus-single .rating > input:checked + label:hover,
+  .venus-single .rating > input:checked ~ label:hover,
+  .venus-single .rating > label:hover ~ input:checked ~ label,
+  .venus-single .rating > input:checked ~ label:hover ~ label {
+    color: #FFED85; }
 
 .navbar .btn-group .dropdown-menu a:hover {
   color: #000 !important; }
