--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -29,7 +29,7 @@ main {
 }
 
 .venus-space {
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 // Start Page Magme
@@ -273,6 +273,56 @@ main {
         .demo:hover {
             opacity: 1;
         }
+    }
+    .customer-list {
+        display: none;
+    }
+    .avatar-customer {
+        max-width: 64px;
+    }
+    .venus-verify-user {
+        color: #00C851;
+        font-size: 0.9rem;
+    }
+    // Rating Star 
+    .rating {
+        border: none;
+        float: left;
+    }
+    .rating>input {
+        display: none;
+    }
+    .rating>label:before {
+        margin: 5px;
+        font-size: 1.25em;
+        font-family: FontAwesome;
+        display: inline-block;
+        content: "\f005";
+    }
+    .rating>.half:before {
+        content: "\f089";
+        position: absolute;
+    }
+    .rating>label {
+        color: #ddd;
+        float: right;
+    }
+    /***** CSS Magic to Highlight Stars on Hover *****/
+    .rating>input:checked~label,
+    /* show gold star when clicked */
+    .rating:not(:checked)>label:hover,
+    /* hover current star */
+    .rating:not(:checked)>label:hover~label {
+        color: #FFD700;
+    }
+    /* hover previous stars in list */
+    .rating>input:checked+label:hover,
+    /* hover current star when changing rating */
+    .rating>input:checked~label:hover,
+    .rating>label:hover~input:checked~label,
+    /* lighten current selection */
+    .rating>input:checked~label:hover~label {
+        color: #FFED85;
     }
 }
 
