--- a/sass/mdb.css
+++ b/sass/mdb.css
@@ -6517,18 +6517,11 @@ main {
 .venus-space {
   margin-top: 2rem; }
 
-.hm-gradient .full-bg-img {
-  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
-  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
-  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.6)), to(rgba(216, 27, 96, 0.6)));
-  background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
-  background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%); }
-
 .flex-center {
   color: #fff; }
 
 .intro-1 {
-  background: url("../img/start_bg.jpg");
+  background: url("../img/venus_intro_lady.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -6560,6 +6553,10 @@ main {
 
 .modal .nav-item .nav-link {
   color: black; }
+
+.modal .venus-add-opinion-content {
+  border-top-left-radius: .45rem;
+  border-top-right-radius: .45rem; }
 
 .venus-first-slide {
   background: url("../img/slide1.jpg");
@@ -6709,6 +6706,8 @@ main {
     .venus-single .venus-gallery-container .active,
     .venus-single .venus-gallery-container .demo:hover {
       opacity: 1; }
+  .venus-single .verify-customer-lead {
+    font-size: .8rem; }
   .venus-single .customer-list {
     display: none; }
   .venus-single .avatar-customer {
@@ -6753,7 +6752,7 @@ main {
   margin-bottom: 3rem; }
 
 .venus-jumbo {
-  background: url("../img/jumbo-main.jpg");
+  background: url("../img/new_jumbo_anons.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -6771,6 +6770,18 @@ main {
 
 .venus-simple-search input[type=text] {
   height: 3.3rem; }
+
+.job-container {
+  padding-bottom: 0; }
+
+.job-header {
+  margin-top: 5rem; }
+
+.job-search {
+  padding: 0 2rem; }
+  .job-search .btn {
+    margin-left: 0;
+    margin-top: 1.2rem; }
 
 footer.page-footer {
   background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, 0.6) 100%);
@@ -6791,7 +6802,9 @@ footer.page-footer {
   .venus-single .card-title {
     font-size: 1.5rem; }
   .venus-single .venus-space {
-    margin-top: 0; } }
+    margin-top: 0; }
+  .card .card-body .btn-anons {
+    display: none; } }
 
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav {
