--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -33,20 +33,19 @@ main {
 }
 
 // Start Page Magme
-.hm-gradient .full-bg-img {
-    background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
-    background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
-    background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.6)), to(rgba(216, 27, 96, .6)));
-    background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
-    background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
-}
-
+// .hm-gradient .full-bg-img {
+//     background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+//     background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+//     background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.6)), to(rgba(216, 27, 96, .6)));
+//     background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+//     background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
+// }
 .flex-center {
     color: #fff;
 }
 
 .intro-1 {
-    @include bgimage-jpg('start_bg');
+    @include bgimage-jpg('venus_intro_lady');
     @include bg-attr(cover, no-repeat, center);
 }
 
@@ -93,6 +92,14 @@ main {
         .nav-link {
             color: black;
         }
+    }
+}
+
+// Modal Dodaj Opinie
+.modal {
+    .venus-add-opinion-content {
+        border-top-left-radius: .45rem;
+        border-top-right-radius: .45rem;
     }
 }
 
@@ -274,6 +281,9 @@ main {
             opacity: 1;
         }
     }
+    .verify-customer-lead {
+        font-size: .8rem;
+    }
     .customer-list {
         display: none;
     }
@@ -339,7 +349,7 @@ main {
 }
 
 .venus-jumbo {
-    @include bgimage-jpg('jumbo-main');
+    @include bgimage-jpg('new_jumbo_anons');
     @include bg-attr(cover, no-repeat, center);
 }
 
@@ -362,6 +372,23 @@ main {
     }
     input[type=text] {
         height: 3.3rem;
+    }
+}
+
+// Oferty pracy
+.job-container {
+    padding-bottom: 0;
+}
+
+.job-header {
+    margin-top: 5rem;
+}
+
+.job-search {
+    padding: 0 2rem;
+    .btn {
+        margin-left: 0;
+        margin-top: 1.2rem;
     }
 }
 
@@ -392,6 +419,13 @@ footer.page-footer {
         }
         .venus-space {
             margin-top: 0;
+        }
+    }
+    .card {
+        .card-body {
+            .btn-anons {
+                display: none;
+            }
         }
     }
 }
