--- a/sass/mdb/_custom.scss
+++ b/sass/mdb/_custom.scss
@@ -74,6 +74,14 @@
        margin-top: 2rem;
    }
    
+   .logo_venus_svg_hello_page {
+       max-width: 250px;
+   }
+   
+   .logo_venus_svg_main {
+       max-width: 200px;
+   }
+   
    // Start Page Magme
    // .hm-gradient .full-bg-img {
    //     background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.6), rgba(216, 27, 96, .6) 100%);
@@ -462,6 +470,9 @@
    
    // Responsive
    @media (max-width: 767px) {
+       .home-intro-venus {
+           margin-top: 4rem;
+       }
        .card-title {
            font-size: 0.9rem;
        }
@@ -490,7 +501,7 @@
        }
        .user-panel {
            .user-account-container {
-               padding-top: 25%;
+               padding-top: 35%;
            }
        }
    }
